<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">浙江艺术学院教师课程表</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty"></string>
    <string name="mon">周一</string>
	<string name="tue">周二</string>
	<string name="wen">周三</string>
	<string name="thu">周四</string>
	<string name="fri">周五</string>
	<string name="sta">周六</string>
	<string name="sun">周日</string>

</resources>
